--- a/apps/autores/templates/autores/author_prueba.html
+++ b/apps/autores/templates/autores/author_prueba.html
@@ -25,6 +25,11 @@
 
 
 {% block content %}
+<script>
+    var num = localStorage.getItem('biblioteca_id')
+
+</script>
+
 
     <div class="container mt-3">
         <div class="table-responsive">    
@@ -50,7 +55,11 @@
                             <th> {{ book.ubicacion }} </th>
                             
                             <th> {{ book.disponibles }} </th>
-                            <th> <a href="{% url 'prestamos:pre-prestamo' book.id %}" class="btn btn-info"> Prestar </a> </th>
+                            {% if book.disponibles > 0 %}
+                                <th> <a href="{% url 'prestamos:pre-prestamo' book.id %}" class="btn btn-info"> Prestar </a> </th>
+                            {% else %}
+                                <th> No disponible </th>
+                            {% endif %}
                         </tr>
                     {% endfor %}
                 </tbody>
