--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -39,14 +39,13 @@
     $('button').on('click', function(evt){
         // evt.preventDefault()
         var biblioteca = $('#slc_biblioteca').val()
-        localStorage.setItem('biblioteca_actual', biblioteca)
+        localStorage.setItem('biblioteca_id', biblioteca)
 
     })
 
     
 </script>
 
-<script src="{% static 'js/login.js' %}"></script>
 <style>
     .nav-link{
         display: none;
