--- a/apps/libros/templates/libros/libros_list_admin.html
+++ b/apps/libros/templates/libros/libros_list_admin.html
@@ -19,7 +19,7 @@
     <a href="{% url 'prestamos:prestamo-admin' %}" class="nav-link"> Prestamos </a>
 </li>
 <li class="nav-item">
-    <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Prestamos </a>
+    <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Bibliotecas </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'usuarios:list-users' %}" > Usuarios </a> 
