--- a/apps/autores/templates/autores/author_list_admin.html
+++ b/apps/autores/templates/autores/author_list_admin.html
@@ -17,6 +17,9 @@
     <li class="nav-item">
             <a href="{% url 'prestamos:prestamo-admin' %}" class="nav-link"> Prestamos </a>
     </li>
+    <li class="nav-item">
+        <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Bibliotecas </a>
+    </li>
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'usuarios:list-users' %}"> Usuarios </a>
     </li>
