--- a/apps/prestamos/templates/prestamos/prestamo_list_admin.html
+++ b/apps/prestamos/templates/prestamos/prestamo_list_admin.html
@@ -1,9 +1,9 @@
 {% extends "base.html" %}
 
-{% block title %} Mis prestamos {% endblock %}
+{% block title %} Prestamos {% endblock %}
 
 {% block navbar_items %}
-<li class="nav-item active">
+<li class="nav-item ">
     <a class="nav-link" href="{% url 'book:admin_index' %}"> Libros <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item">
@@ -12,11 +12,11 @@
 <li class="nav-item">
     <a class="nav-link" href="{% url 'temas:temas-admin' %}"> Tema </a>
 </li>
-<li class="nav-item">
+<li class="nav-item active">
     <a href="{% url 'prestamos:prestamo-admin' %}" class="nav-link"> Prestamos </a>
 </li>
-<li class="nav-item">
-    <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Prestamos </a>
+<li class="nav-item ">
+    <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Bibliotecas </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'usuarios:list-users' %}" > Usuarios </a> 
