--- a/apps/temas/templates/temas/temas_form.html
+++ b/apps/temas/templates/temas/temas_form.html
@@ -3,20 +3,20 @@
 {% block title %} Temas {% endblock %}
 
 {% block navbar_items %}
-<li class="nav-item active">
+<li class="nav-item ">
     <a class="nav-link" href="{% url 'book:admin_index' %}"> Libros <span class="sr-only">(current)</span></a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'autor:autores-admin' %}"> Autor </a>
 </li>
-<li class="nav-item">
+<li class="nav-item active">
     <a class="nav-link" href="{% url 'temas:temas-admin' %}"> Tema </a>
 </li>
 <li class="nav-item">
     <a href="{% url 'prestamos:prestamo-admin' %}" class="nav-link"> Prestamos </a>
 </li>
 <li class="nav-item">
-    <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Prestamos </a>
+    <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Bibliotecas </a>
 </li>
 <li class="nav-item">
     <a class="nav-link" href="{% url 'usuarios:list-users' %}" > Usuarios </a> 
