--- a/usuarios/templates/usuarios/user_form.html
+++ b/usuarios/templates/usuarios/user_form.html
@@ -4,7 +4,6 @@
 
 
 {% block navbar_items %}
-
     <li class="nav-item ">
         <a class="nav-link" href="{% url 'book:admin_index' %}"> Libros <span class="sr-only">(current)</span></a>
     </li>
@@ -14,11 +13,14 @@
     <li class="nav-item">
         <a class="nav-link" href="{% url 'temas:temas-admin' %}"> Tema </a>
     </li>
-    <li class="nav-item">
-        <a href="#" class="nav-link"> Prestamos </a>
+    <li class="nav-item ">
+        <a href="{% url 'prestamos:prestamo-admin' %}" class="nav-link"> Prestamos </a>
+    </li>
+    <li class="nav-item ">
+        <a href="{% url 'book:bibliotecas' %}" class="nav-link"> Bibliotecas </a>
     </li>
     <li class="nav-item active">
-        <a href="{% url 'usuarios:list-users' %}" class="nav-link"> Usuarios </a>
+        <a class="nav-link" href="{% url 'usuarios:list-users' %}" > Usuarios </a> 
     </li>
 
 {% endblock navbar_items %}
