--- a/apps/autores/templates/autores/author_list_user.html
+++ b/apps/autores/templates/autores/author_list_user.html
@@ -27,9 +27,9 @@
 
 
 
-<div class="container">
+<div class="container mt-5">
     <div class="table-responsive">  
-        <table class="table table-hover mt-3" id="table-controller">
+        <table class="table table-hover mt-3 table-sm" id="table-controller">
             
             <thead class="thead-dark">
                 <tr>
@@ -51,7 +51,7 @@
                         <th> {{ autor.nacionalidad }} </th>
                         <th> {{ autor.books }} </th>
                         <th> {{ autor.fecha_registro|date:"l d M Y" }} </th>
-                        <th> <a href="{% url 'autor:prueba' autor.id %}" class="btn btn-info"> Ver </a></th>
+                        <th> <a href="{% url 'autor:prueba' autor.id %}" class="btn btn-warning"> Ver </a></th>
                     </tr>   
                     {% empty %}
                     <div class="container mt-2">
