--- a/apps/prestamos/templates/prestamos/prestamo_list.html
+++ b/apps/prestamos/templates/prestamos/prestamo_list.html
@@ -26,7 +26,8 @@
 
 
 <div class="container mt-3 " style="height: 350px;">
-    <table class="table table-hover" id="table-controller">
+    <div class="table-responsive">
+    <table class="table table-hover table-sm" id="table-controller">
         <thead class="thead-dark">
             <tr>
                 <th scope="col"> # </th>
@@ -61,12 +62,15 @@
             </tbody>
         </thead>
     </table>
+    </div>
 </div>
 
 
 
-<div class="container mt-3 ">
-        <table class="table table-hover" id="table-controller2">
+<div class="container">
+    <div class="table-responsive">
+        <h3 class="mt-4"> Mi historial </h3>
+        <table class="table table-hover table-sm" id="table-controller2">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col"> # </th>
@@ -106,6 +110,7 @@
                 </tbody>
             </thead>
         </table>
+        </div>
     </div>
 
     <script>
