--- a/usuarios/templates/usuarios/create_user.html
+++ b/usuarios/templates/usuarios/create_user.html
@@ -17,6 +17,9 @@
 
 <script>
     document.getElementById('id_imagen').setAttribute('accept', 'image/*')
+    var error = $('.errorlist').css({'color': 'red', 'font-size': '25px'})
+
+    var birht_date = '';
     
 </script>
 <style>
