--- a/usuarios/templates/usuarios/login.html
+++ b/usuarios/templates/usuarios/login.html
@@ -13,6 +13,17 @@
 
 <div>
     <center>
+    {% if messages %}
+        {% for message in messages  %}
+        <div class="alert alert-success alert-dismissible fade show" role="alert">
+                <strong> {{ message }}</strong>
+                <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                  <span aria-hidden="true">&times;</span>
+                </button>
+              </div>
+        {% endfor %}
+    {% endif %}
+
     <form method="POST" class="px-5 py-3">
         <div class="form-group mx-auto">
         {% csrf_token %}
