--- a/apps/prestamos/templates/prestamos/detalle_prestamo.html
+++ b/apps/prestamos/templates/prestamos/detalle_prestamo.html
@@ -47,7 +47,7 @@
                     </tr>
                     <tr>
                         <th> Fecha de devolucion </th>
-                        <th> {{ fecha_devolucion }} </th>
+                        <th> {{ fecha_devolucion.day }} / {{ fecha_devolucion.month}} / {{ fecha_devolucion.year}} </th>
                     </tr>
                 </tbody>
 
