--- a/usuarios/templates/base.html
+++ b/usuarios/templates/base.html
@@ -30,7 +30,7 @@
 
     <title>{% block title %}  {% endblock title %}</title>
 </head>
-<body>
+<body class="bg-light">
     
     <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
         <a class="navbar-brand" href="{% url 'usuarios:index' %}">Biblioteca</a>
