--- a/apps/prestamos/templates/prestamos/detalle_prestamo.html
+++ b/apps/prestamos/templates/prestamos/detalle_prestamo.html
@@ -6,9 +6,10 @@
 
 {% block content %}
 
-    <div class="container w-50 mt-5">
+
+    <div class="container mt-5">
         
-        <table class="table table-hover ">
+        <table class="table table-hover text-center">
             <thead class="thead-dark">
                 <tr>
                     <th scope="col"> Clasificacion</th>
@@ -69,9 +70,10 @@
             <input type="hidden" name='token' id="token">
             <button type="submit"> Prestar </button>
         </form>
-
-               
         {% endif %}
+
+    </div>
+       
        
        
 
