--- a/apps/prestamos/templates/prestamos/prestamo_list.html
+++ b/apps/prestamos/templates/prestamos/prestamo_list.html
@@ -25,7 +25,7 @@
 {% block content %}
 
 
-<div class="container mt-3 " style="height: 350px;">
+<div class="container mt-3 " style="height: 350px; overflow: auto;">
     <div class="table-responsive">
     <table class="table table-hover table-sm" id="table-controller">
         <thead class="thead-dark">
