--- a/apps/libros/templates/libros/libros_list_admin.html
+++ b/apps/libros/templates/libros/libros_list_admin.html
@@ -31,17 +31,14 @@
 {% block content %}
 
     <div class="container mt-4">
-        <a href="{% url 'book:crear-libro' %}" class="btn btn-primary"> <i class="fas fa-plus"></i>   Ingresar Libro </a>
+        <div class="row">
+            <div class="col-md-6">
+                <a href="{% url 'book:crear-libro' %}" class="btn btn-primary"> <i class="fas fa-plus"></i>   Ingresar Libro </a>
+                <a href="{% url 'prestamos:devolver-codigo' %}" class="btn btn-success"> <i class="fas fa-exchange-alt"></i>   Devolver Libro </a>
+            </div>
+        </div>
     </div>
 
-<!--    
-        <form method="GET" class=" mt-2 justify-content-center">
-            <input type="text" name="paginate_by" > 
-            <button type="submit"> Hecho</button>
-        </form> -->
-    
-    
-    
     <div class="container mt-3">
         <div class="table-responsive-md">
             <table class="table table-hover mt-3 text-center table-sm" id="table-controller">
